# DailyStock

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  weekly_run.yml
config/: default.yaml
data/samples/: daily_bars.csv  dividends.csv  financials.csv  free_cash_flow.csv  meta.csv  valuation_history.csv
data/seed/akshare/: README.md
history/20260529/: dashboard.md  feishu_summary.md  final_candidates.csv  result.json  run_metadata.json
history/20260605/: dashboard.md  feishu_summary.md  final_candidates.csv  result.json  run_metadata.json
history/20260612/: dashboard.md  feishu_summary.md  final_candidates.csv  result.json  run_metadata.json
latest/: dashboard.md  feishu_summary.md  final_candidates.csv  result.json  run_metadata.json
scripts/: openclaw_trigger_actions.sh  openclaw_wait_for_scheduled_result.sh  send_feishu_summary.py
src/dailystock/: __init__.py  cli.py  config.py  pipeline.py  webhook.py
src/dailystock/data_sources/: akshare.py  akshare_seed.py  base.py  local_db.py  sample.py  tushare.py
src/dailystock/executor/: futu_client.py  step5_futu_executor.py
src/dailystock/filters/: __init__.py  step1_fetch_meta.py  step2_hard_filters.py  step3_financial_quality.py  step4_valuation.py
src/dailystock/models/: __init__.py  financials.py  market.py  screening.py
src/dailystock/reports/: dashboard.py  exporters.py  feishu.py
src/dailystock/utils/: calendar.py  metrics.py  (+1 more)
tests/: test_akshare_provider.py  test_executor.py  test_feishu_sender.py  test_filters.py  test_pipeline.py  test_webhook.py
