[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dailystock"
version = "0.1.0"
description = "Weekly A-share and Hong Kong stock funnel screener with a dry-run Futu execution layer."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "DailyStock Maintainers" }]
dependencies = [
  "akshare>=1.18",
  "fastapi>=0.110",
  "pandas>=2.2",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "pyyaml>=6.0",
  "requests>=2.31",
  "tenacity>=8.2",
  "typer>=0.12",
  "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
data = [
  "tushare>=1.4",
]
futu = [
  "futu-api>=9.0",
]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
dailystock = "dailystock.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/dailystock"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
